--- a/package.json
+++ b/package.json
@@ -3,21 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "1.2.0",
+    "@material-ui/core": "^1.5.1",
     "d3-ease": "1.0.3",
-    "firebase": "5.0.4",
+    "firebase": "^9.23.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-firebase-file-uploader": "2.4.1",
     "react-move": "2.7.0",
     "react-reveal": "1.2.2",
     "react-router-dom": "4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
